# ResumeOptimizer

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  test_ats_manual.py  test_interview_manual.py  test_parser_manual.py  test_suggestion_manual.py
agents/: __init__.py  ats_optimizer.py  base.py  interview_generator.py  resume_parser.py  suggestion_generator.py
api/: __init__.py  config.py  main.py  pipeline.py  store.py
api/routes/: health.py  interview.py  resume.py
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ATSScoreGauge.tsx  ProgressTracker.tsx  ResultsPanel.tsx  UploadForm.tsx
messaging/: __init__.py  consumer.py  producer.py
monitoring/: prometheus.yml
tests/: __init__.py  conftest.py
tests/agents/: test_ats_optimizer.py  test_interview_generator.py  test_resume_parser.py  test_suggestion_generator.py
tests/api/: test_health.py
